# malhas-computacionais

./: .gitignore  CMakeLists.txt  README.md
assets/: 5-vertebra-save.off  9-vertebra-save-off.off  cubo.off  cubo.stl  heart.off  malha.off  malha2-estruturada.off  malha2-naoestruturada.off  malha3-naoestruturada.off  modelo-teste-1.off  modelo-teste-1.vtk  modelo-teste-2.off  modelo-teste.stl  modelo-teste.vtk  modelo.off  modelo.stl  modelo.vtk  piramide.off  plant.off  saida.off  tetraedro.off  triangles.off
models/file_io/: file_io.cpp  file_io.h  file_readers.cpp  file_readers.h  file_writers.cpp  file_writers.h
models/object/: Object.cpp  Object.h  ObjectEditing.cpp  ObjectPicking.cpp  ObjectRendering.cpp
render/: PathTracer.h  controls.cpp  controls.h  render.cpp  render.h
src/: main.cpp  performance-no-prep.cpp  performance-no-prep.h  performance.cpp  performance.h  performance.py
src/mate-face/: performance-5-vertebra-mf.csv  performance-9-vertebra-mf.csv  performance-cubo-mf.csv  performance-hand-mf.csv  performance-heart-mf.csv  performance-plant-mf.csv  performance-results-5-vertebra-mf.txt  performance-results-9-vertebra-mf.txt  performance-results-cubo-mf.txt  performance-results-hand-mf.txt  performance-results-heart-mf.txt  performance-results-plant-mf.txt
src/no-prep/: performance-5-vertebra-no-prep.csv  performance-9-vertebra-no-prep.csv  performance-cubo-no-prep.csv  performance-hand-no-prep.csv  performance-heart-no-prep.csv  performance-plant-no-prep.csv  performance-results-5-vertebra-no-prep.txt  performance-results-9-vertebra-no-prep.txt  performance-results-cubo-no-prep.txt  performance-results-dragon-no-prep.txt  performance-results-hand-no-prep.txt  performance-results-heart-no-prep.txt  performance-results-plant-no-prep.txt
src/prep/: performance-5-vertebra.csv  performance-9-vertebra.csv  performance-cubo.csv  performance-hand.csv  performance-heart.csv  performance-plant.csv  performance-results-5-vertebra.txt  performance-results-9-vertebra.txt  performance-results-cubo.txt  performance-results-dragon.txt  performance-results-hand.txt  performance-results-heart.txt  performance-results-plant.txt
utils/: math_utils.cpp  math_utils.h  string_utils.cpp  string_utils.h
